Se agrega el mensaje en el main

--- a/Natalia.html
+++ b/Natalia.html
@@ -10,6 +10,7 @@
 
     </head>
     <body>
+        <h2>Este es un mensaje nuevo</h2>
         <header> 
             <h1>Titulo del texto</h1>
         </header>
